# revops-agent-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_demo.py  run_erp_demo.py
data/: mock_crm.json
data/runtime/: runtime_store.json
src/revops_agent/: __init__.py  agent.py  erp_server.py  offline_workflow.py  store.py  tools.py
ui/: app.js  index.html  styles.css
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
