[project]
name = "revops-agent-demo"
version = "0.1.0"
description = "Sales and operations automation demo built with the OpenAI Agents SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "openai-agents",
  "langgraph",
]

[project.urls]
Homepage = "https://github.com/Esoteriker/revops-agent-demo"
Repository = "https://github.com/Esoteriker/revops-agent-demo"
Issues = "https://github.com/Esoteriker/revops-agent-demo/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
